# namada-monitoring

./: .env.example  .gitignore  .pint.hcl  Cargo.toml  Dockerfile  README.md  config.toml.example  docker-compose.dev.yml  docker-compose.yml  docker_run.sh  init.sh  justfile  namada-alerts.yml  prometheus.yml  run.sh
.github/workflows/: build.yml  fmt.yml  pint.yml
composer/: .env  docker-compose.yaml  justfile
composer/provisioning/grafana/: dashboard.json  dashboards.yml  datasource.yml
composer/provisioning/prometheus/: namada-alerts.yml  prometheus.yml
src/: apprise.rs  config.rs  constants.rs  error.rs  log.rs  main.rs  rpc.rs  state.rs
src/alerts/: log.rs  mod.rs  slack.rs  telegram.rs
src/checks/: block.rs  epoch.rs  fees.rs  gas.rs  halt.rs  ibc.rs  ibc_limit.rs  mod.rs  pos.rs  slashes.rs  tendermint_rs.rs  total_supply.rs  total_supply_native.rs  transfer_limit.rs  tx.rs  tx_size.rs
src/metrics/: README.md  alert.rs  block.rs  block_height.rs  block_height_counter.rs  block_time.rs  bonds.rs  epoch.rs  epoch_counter.rs  fees.rs  ibc.rs  mod.rs  peers.rs  signatures.rs  slashes.rs  token_total_supply.rs  total_supply_native_token.rs  transaction_size.rs  transactions.rs  transfers.rs  validator.rs  voting_power.rs
src/shared/: alert.rs  block_explorer.rs  checksums.rs  client.rs  config.rs  manager.rs  mod.rs  namada.rs  supply.rs
