[package]
name = "namada-monitoring"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive", "env"] }
clap-verbosity-flag = "2.1.1"
namada_sdk = { version = "0.150.2", default-features = false, features = [ "std", "async-send", "download-params"] }
tendermint-rpc = { version = "0.40.1", features = ["http-client"] }
tokio = {version = "1.8", default-features = false}
reqwest = { version = "0.11.27", features = ["json", "cookies"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
futures = "0.3.30"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0.95"
bimap = { version = "0.6.3", features = ["serde"] }
prometheus_exporter = "0.8.5"
subtle-encoding = "0.5.1"
thiserror = "1.0.56"
tokio-retry2 = { version = "0.5", features = ["jitter", "tracing"] }
toml = "0.8.22"
async-stream = "0.3.6"
ttl_cache = "0.5.1"
async-trait = "0.1.88"
chrono = "0.4.41"
prost = "0.13"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
